refactor: es6 module backend

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "test": "echo \"Error: no tests installed\" && exit 1",
     "prestart": "npm run tsc",
     "start": "if-env NODE_ENV=production && npm run start:prod || npm run start:dev",
-    "start:prod": "npm run tsc && NODE_ENV=production node ./server/dist/server.js",
+    "start:prod": "npm run tsc && NODE_ENV=production node ./server/server.js",
     "start:dev": "concurrently \"nodemon --ignore 'client/*'\" \"npm run client\"",
     "start:server": "cd server && nodemon server.js",
     "client": "cd client && npm run start",
